<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".AdmForm"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:id="@+id/form1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize"
            android:id="@+id/form3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admission_form2"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mandatory"
                android:textAlignment="center"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="start"
                android:text="@string/personal_details"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:background="@color/colorprimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/stud_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:ems="10"
                    android:autofillHints="full name"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/father"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_s_name"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mother"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_s_name"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/sex"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/female"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:id="@+id/other"/>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:id="@+id/address"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="start"
                android:text="@string/academics_details"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:background="@color/colorprimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10th_grade_details"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/qual_1"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/skul_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school_name"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/marks1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marks_in_percentage"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_12th_grade_details"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/qual_2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/skul_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school_name"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/streams"/>
            <Spinner
                android:id="@+id/stream"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/stream" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/marks2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marks_in_percentage"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graduation_details"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/qual_3"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/collge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/college_name"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graduation_course"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/grad_t"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/grad_course"
                android:layout_marginBottom="10dp"
                android:id="@+id/grad"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/marks_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marks_in_percentage"
                    android:autofillHints="full name"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/courses_select"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="start"
                android:text="@string/choose_course"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:background="@color/colorprimary"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/courses"/>
            <Spinner
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/cousres"
                android:layout_marginTop="5dp"/>


            <Button
                style="?android:buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:id="@+id/submit"
                />




        </LinearLayout>
    </ScrollView>

</LinearLayout>