<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SignUp"

    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:hintTextColor="@color/colorAccent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="First name"
            android:ems="10"
            android:hint="@string/full_name"
            android:textCursorDrawable="@null"
            android:inputType="text"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/phone_number"
                android:textCursorDrawable="@null"
                android:inputType="phone"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="abc@gmail.com"
                android:ems="10"
                android:hint="@string/email"
                android:textCursorDrawable="@null"
                android:inputType="textEmailAddress"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"

            app:hintTextColor="@color/colorAccent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="123"
                android:ems="10"
                android:hint="@string/password"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintTextColor="@color/colorAccent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="123"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:textSize="22sp" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"

        />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/already_registered_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            />
   </LinearLayout>